# diagrams-gl

./: .gitignore  LICENSE  README.md  diagrams-gl.cabal
src/: dia.frag  dia.vert
src/Diagrams/Backend/: GL.hs
