name:                diagrams-gl
version:             0.0.1.0
synopsis:            OpenGL backend for diagrams
-- description:         
homepage:            https://github.com/isomorphism/diagrams-gl
license:             BSD3
license-file:        LICENSE
author:              C. A. McCann
maintainer:          cam@uptoisomorphism.net
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Diagrams.Backend.GL
  -- other-modules:       
  other-extensions:    PatternSynonyms, ViewPatterns, UndecidableInstances, TemplateHaskell, NoMonomorphismRestriction, FlexibleInstances, FlexibleContexts, MultiParamTypeClasses, TypeFamilies, DeriveDataTypeable, GeneralizedNewtypeDeriving, StandaloneDeriving
  build-depends:       base             >= 4.7 && <4.8, 
                       mtl              >=2.2 && <2.3, 
                       transformers     >=0.4 && <0.5, 
                       gl               >=0.7 && <0.8, 
                       lowgl            >=0.3 && <0.4, 
                       text             >=1.2 && <1.3, 
                       containers       >=0.5 && <0.6,  
                       diagrams-lib     >=1.2 && <1.3, 
                       diagrams-contrib >=1.1 && <1.2, 
                       linear           >=1.16 && <1.17, 
                       lens             >=4.7 && <4.9, 
                       data-default      >=0.5 && <0.6, 
                       vector           >=0.10 && <0.11, 
                       diagrams-core    >=1.2 && <1.3, 
                       JuicyPixels      >=3.2 && <3.3
  hs-source-dirs:      src
  default-language:    Haskell2010